--- a/src/index.css
+++ b/src/index.css
@@ -146,9 +146,8 @@ border: none;
   border: none;
   }
 
-  .ce-chat-list-mobile-option{
-   display: block;
-   width: 200px;
+  .ce-chat-feed{
+    font-size: 16px;
   }
   
 }
