--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,11 @@ border: none;
     margin-top: 140px;
     margin-left: 35px;
    font-size: large;
+   transition: transform 0.3s ease-in-out;
+  }
+
+  #login-card:hover{
+    transform: scale(1.2);
   }
   
   .logout-tab {
@@ -144,10 +149,36 @@ border: none;
     background-image: url("https://cdn-icons-png.flaticon.com/128/5542/5542821.png");
   background-size: 52px;
   border: none;
+  transition: transform 0.3s ease-in-out;
   }
 
+  .logo-img{
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .logo-img:hover{
+    transform: scale(1.3);
+  }
+
+  .logout-tab:hover{
+    transform: scale(1.3);
+  }
   .ce-chat-feed{
     font-size: 16px;
   }
+
+  .facebook {
+    transition: transform 0.3s ease-in-out;
+  }
+  .facebook:hover {
+    transform: scale(1.1);
+  }
   
+  .google {
+    transition: transform 0.3s ease-in-out;
+  }
+
+   .google:hover {
+    transform: scale(1.1);
+  }
 }
